fix: Overflow focus ring update student

--- a/app/src/styles/tailwind.css
+++ b/app/src/styles/tailwind.css
@@ -223,6 +223,7 @@ h5 {
 
 input[type="time"]::-webkit-calendar-picker-indicator {
   background: none;
+  tabindex: -1;
 }
 
 .has-list {
